@@ -1,1 +1,2 @@
 future
+multiprocess >= 0.70.9
